--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "OpenRVL"]
 	path = OpenRVL
-	url = https://github.com/kiwi515/open_rvl.git
+	url = https://github.com/JaredWhiteOne/open_rvl.git
